리팩토링 전부끝 제출직전2

--- a/templates/base.html
+++ b/templates/base.html
@@ -126,6 +126,7 @@
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="adminMenu">
                 <li><a class="dropdown-item" href="/admin/permission-settings"><i class="bi bi-shield-lock"></i> 권한 설정</a></li>
                 <li><a class="dropdown-item" href="/admin/menu-settings"><i class="bi bi-sliders"></i> 메뉴 설정</a></li>
+                <li><a class="dropdown-item" href="/admin/usage-dashboard"><i class="bi bi-graph-up"></i> 사용 현황</a></li>
                 <li><a class="dropdown-item" href="/admin/data-management"><i class="bi bi-trash"></i> 데이터 관리</a></li>
               </ul>
             </div>
