--- a/templates/follow-sop.html
+++ b/templates/follow-sop.html
@@ -851,7 +851,7 @@ function updateDeleteButton() {
 
 // 비밀번호 확인 후 선택한 항목 삭제
 function deleteSelectedWithPassword() {
-    PwModal.show(deleteSelected);
+    PwModal.show(deleteSelected, { boardType: 'follow_sop' });
 }
 
 function requestFollowSopFinalCheck() {
