--- a/templates/partner-accident.html
+++ b/templates/partner-accident.html
@@ -823,7 +823,7 @@ function updateDeleteButton() {
 
 // 비밀번호 확인 후 선택한 항목 삭제
 function deleteSelectedWithPassword() {
-    PwModal.show(deleteSelected);
+    PwModal.show(deleteSelected, { boardType: 'accident' });
 }
 
 // 선택한 항목 삭제
