--- a/templates/safety-instruction.html
+++ b/templates/safety-instruction.html
@@ -870,7 +870,7 @@ function updateDeleteButton() {
 
 // 비밀번호 확인 후 선택한 항목 삭제
 function deleteSelectedWithPassword() {
-    PwModal.show(deleteSelected);
+    PwModal.show(deleteSelected, { boardType: 'safety_instruction' });
 }
 
 // 선택한 항목 삭제
