--- a/templates/safe-workplace-detail.html
+++ b/templates/safe-workplace-detail.html
@@ -186,7 +186,7 @@
                                                data-field="{{ col.column_key }}_id"
                                                value="{{ workplace.get(col.column_key ~ '_id') if workplace else '' }}">
                                         <button class="btn btn-sm btn-primary"
-                                                onclick="alert('테이블 검색 기능은 구현되지 않았습니다.')">검색</button>
+                                                onclick="openTableSearch('{{ col.column_key }}')">검색</button>
                                     </div>
                                 {% else %}
                                     <input type="text"
