제출전 마지막 수정6

--- a/templates/admin-change-request-columns.html
+++ b/templates/admin-change-request-columns.html
@@ -1361,7 +1361,7 @@ let editingId = null;
                 columns: [
                     { name: '성함', key_suffix: '', type: 'popup_contractor' },
                     { name: 'ID', key_suffix: '_id', type: 'linked_text' },
-                    { name: '소속업체', key_suffix: '_company', type: 'popup_company' },
+                    { name: '소속업체', key_suffix: '_company', type: 'linked_text' },
                     { name: '사업자번호', key_suffix: '_bizno', type: 'linked_text' }
                 ]
             },
