--- a/templates/safe-workplace-register.html
+++ b/templates/safe-workplace-register.html
@@ -117,7 +117,7 @@
                                             <input type="number" min="0" step="1"
                                                    class="scoring-input"
                                                    data-item="{{ it.id }}"
-                                                   data-score="{{ it.per_unit_delta }}"
+                                                   data-score="{{ it.per_unit_delta }}" data-delta="{{ it.per_unit_delta }}"
                                                    value="0">
                                         </div>
                                         {% endfor %}
