--- a/templates/follow-sop-detail.html
+++ b/templates/follow-sop-detail.html
@@ -309,7 +309,7 @@
                                             <input type="number" min="0" step="1"
                                                    class="scoring-input"
                                                    data-item="{{ it.id }}"
-                                                   data-score="{{ it.per_unit_delta }}"
+                                                   data-score="{{ it.per_unit_delta }}" data-delta="{{ it.per_unit_delta }}"
                                                    data-group="{{ sc['total_key'] if sc and ('total_key' in sc) else 'default' }}"
                                                    value="{{ values[it.id] if values and it.id in values and values[it.id] is not none and values[it.id] != '' else '' }}">
                                             {% if sc.get('show_unit_hint', True) %}
